--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="org.codepath.assignment1.tipcalculator.TipCalculator"
+            android:windowSoftInputMode="stateVisible|adjustResize"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
