--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,18 +5,19 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
+        android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/BlackTheme" >
         <activity
             android:name="org.codepath.assignment1.tipcalculator.TipCalculator"
             android:windowSoftInputMode="stateVisible|adjustResize"
-            android:label="@string/app_name" >
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
